using HS256 to sign

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "tet.js",
   "dependencies": {
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6"
   },
   "devDependencies": {},
   "scripts": {
